--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,8 @@
 ---
 applications:
-- name: spring-music
+- name: spring-music1
   memory: 1G
   random-route: true
-  path: build/libs/spring-music-1.0.jar
+  domain: scapp.swisscom.com
+  path: build/libs/spring-music1-1.0.jar
 
